# Scientific-Computing-with-Python

./: README.md
Arithmetic Formatter/: arithmetic_arranger.py  main.py  test_module.py
Budget App/: budget.py  main.py
Polygon Area Calculator/: main.py
Time Calculator/: main.py
arithmetic-formatter/: README.md  arithmetic_arranger.py  pyproject.toml
budget- app/: budget.py  main.py
budget-app/: README.md  budget.py  pyproject.toml
polygon-area-calculator/: pyproject.toml  shape_calculator.py
probability-calculator/: README.md  main.py  prob_calculator.py  pyproject.toml
time-calculator/: README.md  pyproject.toml  time_calculator.py
