[tool.poetry]
name = "arithmetic formatter"
version = "0.1.0"
description = ""
authors = ["bilalkhan13 <bilalahmad.khan@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
